# mtrx3760_LAB_3

./: ExampleReadCircuitFile.cpp  README.md
Lab 3/: Lab_3_dynamical_circuit.cpp  circuit_tester.txt
Lab_3/: circuit_tester.txt  lab3_code.cpp  run  sample.cpp
Lab_3/Final_code/: CMakeLists.txt  main.cpp
Lab_3/Final_code/include/: CAndGate.h  CFileReader.h  CLogicGates.h  CNOTGate.h  COneBitComparator.h  COrGate.h  CXORGate.h  Circuit.h
Lab_3/Final_code/src/: CAndGate.cpp  CFileReader.cpp  CNOTGate.cpp  COneBitComparator.cpp  COrGate.cpp  CXORGate.cpp  Circuit.cpp
Lab_3/final/: CMake.txt
Lab_3/final/Include/: AndGate.h  Circuit.h  Comparator.h  FileReader.h  LogicGates.h  NOTGate.h  OrGate.h  XORGate.h
Lab_3/final/src/: AndGate.cpp  Circuit.cpp  Comparator.cpp  FileReader.cpp  NotGate.cpp  OrGate.cpp  XORGate.cpp  main.cpp
Lab_3/output/: lab3_code
Lab_3/testing_codes/: half_adder_circuit.txt  lab3_code.cpp  one_bit_comparator_circuit.txt
